# swn-tui

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs
src/model/: mod.rs
src/ui/: mod.rs
test/: Canomed Theta - September 23, 2021.json  Jafquaa Theta - September 18, 2021.json  Phenes Pi - September 18, 2021.json  shai_rutan.json
