[package]
name = "swn"
version = "0.1.0"
authors = ["rektdeckard <friedtm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
crossterm = "0.17"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
array2d = "0.2.1"
perlin_noise = "1.0.1"
rand = "0.8.4"
rand_seeder = "0.2.2"
rand_pcg = "0.3.1"